--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,47 +9,23 @@
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        style="@style/AvatarImageViewStyle" />
 
     <TextView
         android:id="@+id/first_name"
+        style="@style/DetailTextViewStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:padding="4dp"
-        android:textColor="@color/secondaryLightColor"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatar" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/last_name"
+        style="@style/DetailTextViewStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:padding="4dp"
-        android:textColor="@color/secondaryLightColor"
-        android:textSize="24sp"
-        android:textStyle="bold"
-
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/first_name" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/email"
+        style="@style/DetailTextViewStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        android:padding="4dp"
-        android:textColor="@color/secondaryLightColor"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/last_name" />
+        android:layout_height="wrap_content" />
 </LinearLayout>
