--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="80dp"
-    android:layout_margin="8dp"
-    android:backgroundTint="@color/primaryLightColor"
-    app:cardCornerRadius="8dp">
+    style="@style/UserCardViewStyle"
+    android:layout_width="match_parent">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -14,21 +11,15 @@
 
         <TextView
             android:id="@+id/user_name"
+            style="@style/UserTextViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textColor="@color/secondaryColor"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/user_last_name"
+            style="@style/UserTextViewStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="4dp"
-            android:textColor="@color/secondaryColor"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
