--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,22 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="null_margin">0dp</dimen>
+    <dimen name="standard_layout_margin">12dp</dimen>
+    <dimen name="small_layout_margin">8dp</dimen>
+    <dimen name="big_layout_margin">16dp</dimen>
+
+    <dimen name="layout_width_for_avatar">120dp</dimen>
+    <dimen name="layout_height_for_avatar">120dp</dimen>
+    <dimen name="layout_height_for_cardView">80dp</dimen>
+
+    <dimen name="small_padding">4dp</dimen>
+
+    <dimen name="standard_corner_radius">8dp</dimen>
+
+    <dimen name="big_text_size">24sp</dimen>
+
+
+
 </resources>
